--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
 
  <section   class="chicken container ">
       
-<img src="../food/image/chicken1.jpeg">
-<img src="../food/image/chicken2.jpeg">
-<img src="../food/image/chicken3.jpeg">
+<img src="image/chicken1.jpeg">
+<img src="image/chicken2.jpeg">
+<img src="image/chicken3.jpeg">
       
  </section> <!--chicken-->
 
